--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 fastapi==0.111.0
 uvicorn==0.30.1
-torch==2.4.1
-torchvision==0.19.1
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch==2.4.1+cpu
+torchvision==0.19.1+cpu
 pillow==10.4.0
